--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,9 @@ body,
   height: 100%;
   background-color: #f2f0ef;
 }
+
+
+/* Icon hover on MySkillsPage */
+.icon-hover {
+  @apply hover:text-yellow transition-colors duration-200;
+}
